2007-10-02  J. Tang  <jtang@tresys.com>

	* Fix to libqpol to synthesize object_r.  This was previously
	(erroneously) handled in libapol.

2007-10-01  J. Tang  <jtang@tresys.com>

	* Creation a new apol analysis module, 'Symbol Search', that
	utilizes libpolsearch.

2007-09-27  J. Mowery  <jmowery@tresys.com>

	* Creation of a new library, libpolsearch, to find policy
	components satisfying a list of criteria.  This library is wrapped
	by SWIG for Python, Java, and Tcl.

2007-09-26  J. Tang  <jtang@tresys.com>

	* Fix to apol where empty levels would throw an error during
	validation.

2007-09-04  J. Mowery  <jmowery@tresys.com>

	* Fixes to libsefs and apol if an invalid regular expression is
	given.

2007-08-30  J. Mowery  <jmowery@tresys.com>

	* Do not look for neverallow rules on default avrule query if not
	available.

2007-08-22  J. Mowery  <jmowery@tresys.com>

	* Added ability to do case insensitive searching to libapol.

2007-08-21  J. Tang  <jtang@tresys.com>

	* Official release of SETools 3.3.1.  This encompasses only bug
	fixes since 3.3; no new features are present.

2007-08-20  J. Tang  <jtang@tresys.com>

	* Fixed memory leak in libapol/infoflow analysis, where edges were
	not being freed.  Thanks to Ben Martin for spotting this error.

2007-08-16  J. Tang  <jtang@tresys.com>

	* Fixed an error in libapol's infoflow.  When performing a
	transitive search, let there be an intermediate rule with source
	A, an attribute.  If a member of A, type T, is excluded by not
	calling apol_infoflow_analysis_append_intermediate(), it was still
	possible to return an infoflow result that uses T.  This has been
	fixed.

	* apol's domain transition analysis has a new access filter dialog
	that mimics the rule search's class/perm selection.

2007-08-13  J. Tang  <jtang@tresys.com>

	* Fix error in libsefs when querying a filesystem or fcfile by
	range, but the fclist is not MLS.

2007-08-13  J. Mowery  <jmowery@tresys.com>

	* Added SWIG wrappers for libpolsearch.
