@@ -1,7 +1,7 @@
 /**
  *  @file
  *
- *  CUnit testing framework for libqpol.
+ *  Declarations for libqpol iterator tests.
  *
  *  @author Jeremy A. Mowery jmowery@tresys.com
  *  @author Jason Tang jtang@tresys.com
@@ -23,32 +23,13 @@
  *  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
  */
 
-#include <config.h>
+#ifndef ITERATORS_TESTS_H
+#define ITERATORS_TESTS_H
 
 #include <CUnit/CUnit.h>
-#include <CUnit/Basic.h>
 
-#include "capabilities-tests.h"
-#include "iterators-tests.h"
+extern CU_TestInfo iterators_tests[];
+extern int iterators_init();
+extern int iterators_cleanup();
 
-int main(void)
-{
-	if (CU_initialize_registry() != CUE_SUCCESS) {
-		return CU_get_error();
-	}
-
-	CU_SuiteInfo suites[] = {
-		{"Capabilities", capabilities_init, capabilities_cleanup, capabilities_tests}
-		,
-		{"Iterators", iterators_init, iterators_cleanup, iterators_tests}
-		,
-		CU_SUITE_INFO_NULL
-	};
-
-	CU_register_suites(suites);
-	CU_basic_set_mode(CU_BRM_VERBOSE);
-	CU_basic_run_tests();
-	unsigned int num_failures = CU_get_number_of_failure_records();
-	CU_cleanup_registry();
-	return (int)num_failures;
-}
+#endif
